--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,28 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+main {
+  display: flex;
+  width: 100%;
+}
+
+main ul {
+  padding-inline-start: 0;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.textContainer {
+  background-color: #D8D8D8;
+  padding: 10px;
+  margin: 5px
+}
+
+.items {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  list-style: none;
 }
